# src/routes/shows/details.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { getShowsById } from '../../controllers/shows';
+
+const showDetailsRoutes = Router();
+
+showDetailsRoutes.get('/:id', getShowsById);
+
+export { showDetailsRoutes };
