# src/routes/shows/index.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { showDetailsRoutes } from './details';
+
+const showsRoutes = Router();
+
+showsRoutes.use('/', showDetailsRoutes);
+
+export { showsRoutes };
